# WCPCI

./: .dev.env.template  .env  .env.template  .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  Rocket.toml  TODO.md  flake.nix  justfile
.cargo/: config.toml
.github/workflows/: ci.yml
frontend/: astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs
frontend/src/components/: Avatar.astro  BreadCrumb.astro  Button.astro  ButtonLink.astro  CaseIndicator.astro  Collapse.astro  Connection.astro  Field.astro  Form.astro  Label.astro  Link.astro  PlaceIndicator.astro  ProblemRun.astro  Progress.astro  Spinner.astro  Tile.astro  Title.astro
frontend/src/components/forms/: ContestForm.astro  DeleteForm.astro  ProblemForm.astro  TestCaseForm.astro
frontend/src/components/settings/: SettingsNavLink.astro
frontend/src/components/table/: ProblemsTable.astro  Table.astro  TemplatedTable.astro  UserAdminTable.astro
frontend/src/components/tera/: Debug.astro  For.astro  FormFor.astro  Tag.astro  Variable.astro
frontend/src/layouts/: ContestLayout.astro  Delete.astro  Layout.astro  Settings.astro
frontend/src/lib/: editor.ts  editorFeatures.ts  editorLanguages.ts  haskell.ts  highlighting.ts  leaderboard_ws.ts  math.ts  problem_ws.ts  tera.ts  wcpc-monaco-light.json  ws.ts
frontend/src/pages/: error.astro  index.astro  md_help.astro  profile.astro  styles.astro
frontend/src/pages/admin/: delete_user.astro  index.astro  runs.astro
frontend/src/pages/auth/: login.astro
frontend/src/pages/contests/: delete.astro  edit.astro  export.astro  leaderboard.astro  list.astro  new.astro  view.astro
frontend/src/pages/problems/: delete.astro  edit.astro  import-2.astro  import.astro  index.astro  new.astro  runs.astro  view.astro
frontend/src/pages/run/: test.astro
frontend/src/styles/: highlight-theme.scss
migrations/: 20240309192308_init.sql
nix/: backend.nix  container.nix  frontend.nix  rocket_config.nix  shell.nix  staging.nix  testing-nixos-config.nix  wcpc.nix  wrapper.nix
nix-template/: README.md  flake.nix  rocket_config.nix
public/: robots.txt  site.webmanifest
src/: csp.rs  csrf.rs  db.rs  error.rs  main.rs  messages.rs  profile.rs  serve.rs  template.rs  templating.rs
src/admin/: mod.rs  runs.rs  users.rs
src/auth/: csrf.rs  github.rs  google.rs  mod.rs  saml.rs  sessions.rs  users.rs
src/contests/: delete.rs  edit.rs  join.rs  list.rs  mod.rs  new.rs  participant.rs  scoring.rs  view.rs
src/contests/admin/: completions.rs  mod.rs  participants.rs  runs.rs
src/contests/git/: commit.rs  mod.rs  object.rs  tree.rs
src/leaderboard/: manager.rs  mod.rs  scoring.rs  ws.rs
src/problems/: cases.rs  completions.rs  delete.rs  edit.rs  mod.rs  new.rs  runs.rs  view.rs
src/problems/io/: export.rs  import.rs  mod.rs
src/run/: job.rs  languages.rs  manager.rs  mod.rs  runner.rs  ws.rs
src/settings/: contest.rs  delete.rs  mod.rs  profile.rs
(+12 files in other folders)
