[package]
name = "wcpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
chrono-tz = { version = "0.8.6", features = ["serde"] }
dotenvy = "0.15.7"
log = "0.4.21"
markdown = "1.0.0-alpha.16"
openssl = "0.10.64"
rand = "0.8.5"
regex = "1.10.3"
reqwest = { version = "0.11.25", default-features = false, features = ["rustls-tls", "json"] }
rocket = { version = "0.5.0", features = ["json"] }
rocket_async_compression = "0.5.1"
rocket_db_pools = { version = "0.1.0", features = ["sqlx_sqlite"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
rocket_oauth2 = "0.5.0"
rocket_ws = "0.1.0"
samael = { version = "0.0.15", features = ["xmlsec"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha256 = "1.5.0"
slug = "0.1.5"
sqlx = { version = "0.7.3", features = ["migrate", "chrono"] }
tera = "1.19.1"
tokio = { version = "1.36.0", features = ["process"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
